# calyx-nums

./: .editorconfig  .gitignore  Cargo.toml  README.md  ruff.toml  rustfmt.toml
benchmarks/: benchmarks.bib
benchmarks/approx/: axisRotationX.fpcore  axisRotationY.fpcore  forwardk2jX.fpcore  forwardk2jY.fpcore  pendulum1.fpcore  pendulum2.fpcore  predictGaussianNB.fpcore  predictMLPLogistic.fpcore  predictSVC.fpcore  rodriguesRotation.fpcore  sinxx10.fpcore  xu1.fpcore  xu2.fpcore
benchmarks/graphics/: ComputeMetallic.fpcore  FresnelDiffuseReflectance.fpcore  FresnelR.fpcore
benchmarks/misc/: blackscholes.fpcore  inversek2j1.fpcore
benchmarks/scientific/: WGS84toNad27Elevation.fpcore  WGS84toNad27Latitude.fpcore  WGS84toNad27Longitude.fpcore  ellipsoidRadius.fpcore  geographicToCartesianNGAX.fpcore  geographicToCartesianX.fpcore  greatCircleAzimuth.fpcore  greatCircleDistance.fpcore
bib/: benchmarks.bib  references.bib  venues.bib
eval/: harness.py  main.py  qformat.py
eval/fpcore/: __init__.py  ast.py  parser.py  rand.py  sampling.py  syntax.lark
eval/interp/: fixed.py  float.py
eval/libm/: __init__.py  fixed.py  float.py  qformat.py
eval/sim/: harness.py  run.py
fud/: stage.py
fud/hls/: stage.py
fuzzing/: main.py
fuzzing/lib/: fpcore.py  fxp.py  harness.py
macros/: Cargo.toml
macros/src/: lib.rs
primitives/: numbers.futil  numbers.sv
src/: format.rs  lib.rs  main.rs  opts.rs
src/analysis/: bindings.rs  call_graph.rs  context.rs  domain.rs  domains.rs  mod.rs  passes.rs  ranges.rs  type_check.rs
src/approx/: addressing.rs  mod.rs  (+3 more)
(+110 files in other folders)
