[package]
name = "calyx-nums"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.10"
calyx-frontend = "0.4.0"
calyx-ir = "0.4.0"
calyx-utils = "0.4.0"
env_logger = "0.9.3"
itertools = "0.10.5"
log = "0.4.18"
num = "0.4.0"
pest = "2.0"
pest_consume = "1.1.3"
pest_derive = "2.0"
smallvec = "1.10.0"
