[package]
name = "calyx-nums"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
calyx-frontend = "0.6.0"
calyx-ir = "0.6.0"
calyx-utils = "0.6.0"
env_logger = "0.9.0"
itertools = "0.11"
log = "0.4"
num = "0.4"
pest = "2"
pest_derive = "2"
pest_consume = "1"
pretty = { version = "0.12", optional = true }
smallvec = "1"
strum = "0.25"
strum_macros = "0.25"
