[package]
name = "calyx-libm"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1"
codespan-reporting = "0.11"
cranelift-entity = "0.123"
itertools = "0.11"
malachite = "0.4"
pest = "2"
pest_derive = "2"
pest_consume = "1"
pretty = { version = "0.12", optional = true }
smallvec = "1"
strum = "0.27"
strum_macros = "0.27"

calyx-frontend = "0.6.0"
calyx-ir = "0.6.0"
calyx-utils = "0.6.0"

calyx-libm-macros = { path = "macros" }
